# table-recognition-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-all.txt  requirements.txt
src/: main.py  my_service.py  utils.py
src/model/: main_.py
src/model/inference_table/model_final/: inference.pdmodel  inference.yml
